--- a/Readme
+++ b/Readme
@@ -1,2 +1,3 @@
 Please follow these instructions to access the source code:
-1. 
+This is a zip file of the final version of the project
+1. Click on code button
