--- a/Readme
+++ b/Readme
@@ -1,3 +1,5 @@
 Please follow these instructions to access the source code:
 This is a zip file of the final version of the project
-1. Click on code button
+1. Click on green coloer code button
+2. Click on download zip
+3. 
